--- a/package.json
+++ b/package.json
@@ -1,37 +1,41 @@
 {
-  "name": "pad-stdio",
-  "version": "2.0.0",
-  "description": "Pad stdout and stderr",
-  "license": "MIT",
-  "repository": "sindresorhus/pad-stdio",
-  "author": {
-    "name": "Sindre Sorhus",
-    "email": "sindresorhus@gmail.com",
-    "url": "sindresorhus.com"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  },
-  "scripts": {
-    "test": "mocha"
-  },
-  "files": [
-    "index.js"
-  ],
-  "keywords": [
-    "pad",
-    "indent",
-    "cli",
-    "format",
-    "string",
-    "stdio",
-    "stdout",
-    "stderr"
-  ],
-  "dependencies": {
-    "lpad": "^2.0.1"
-  },
-  "devDependencies": {
-    "mocha": "*"
-  }
+	"name": "pad-stdio",
+	"version": "2.0.0",
+	"description": "Pad stdout and stderr",
+	"license": "MIT",
+	"repository": "sindresorhus/pad-stdio",
+	"funding": "https://github.com/sponsors/sindresorhus",
+	"author": {
+		"name": "Sindre Sorhus",
+		"email": "sindresorhus@gmail.com",
+		"url": "https://sindresorhus.com"
+	},
+	"type": "module",
+	"exports": "./index.js",
+	"engines": {
+		"node": ">=12"
+	},
+	"scripts": {
+		"test": "xo && ava"
+	},
+	"files": [
+		"index.js"
+	],
+	"keywords": [
+		"pad",
+		"indent",
+		"cli",
+		"format",
+		"string",
+		"stdio",
+		"stdout",
+		"stderr"
+	],
+	"dependencies": {
+		"lpad": "^3.0.0"
+	},
+	"devDependencies": {
+		"ava": "^3.15.0",
+		"xo": "^0.38.2"
+	}
 }
